# azure-flask-cosmos-mongodb-appservice

./: .cruft.json  README.md  azure.yaml
.devcontainer/: devcontainer.json  docker-compose_dev.yml
.github/workflows/: audit-bicep.yml  tests.yml
infra/: db.bicep  main.bicep  main.parameters.json  web.bicep
infra/core/database/cosmos/: cosmos-account.bicep
infra/db/: cosmos-mongodb.bicep  cosmos-postgres.bicep  postgres-flexible.bicep
src/: entrypoint.sh  pyproject.toml
src/flaskapp/: __init__.py  models.py  pages.py  seeder.py
src/tests/: conftest.py
src/tests/local/: conftest.py
