[project]
name = "flaskapp"
version = "1.0.0"
description = "Create a relecloud demo application with flask and cosmos-mongodb"
dependencies = [
    "Flask==2.3.2",
    "opencensus-ext-azure==1.1.9",
    "opencensus-ext-flask==0.8.2",
    "mongoengine==0.27.0",
    ]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"
